new file:   src/media/1--1024x683.jpg new file:   src/media/1--400x300.jpg	new file:   src/media/1--768x1024.jpg new file:   src/media/1-.jpg 	new file:   src/product_files/1--1.jpg 	modified:   src/trpc/payment-router.ts

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
 # Any value works here, should be somewhat secure
-PAYLOAD_SECRET=
+PAYLOAD_SECRET='ab10cbac91aa95d26d0fe711cd2d9246'
 
 # Database - either MongoDB or Postgres work
 MONGODB_URL=
